syntax = "proto3";

option go_package = "github.com/nekia/rent-watch-go/protobuf/checker";

message FloorLevel {
  int32 floorLevel = 1;
  int32 floorTopLevel = 2;
}

enum RoomType {
  RENT = 0;
  SALE = 1;
}

message RoomDetail {
  string url = 1;
  double price = 2;
  double size = 3;
  FloorLevel floorLevel = 4;
  string address = 5;
  int32 builtYear = 6;
  RoomType type = 7;
  bool isPetOK = 8;
}
